--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.19",
-    "@types/react": "^17.0.16",
+    "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "firebaseui": "^5.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8",
+    "firebase": "^9.0.0-beta.8",
     "gh-pages": "^3.2.3"
   }
 }
