--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "homepage": "https://SamNal2008.github.io/cv-react",
+  "homepage": "https://SamNal2008.github.io/cv",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
