--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "firebaseui": "^5.0.0",
+    "markdown-to-jsx": "^7.1.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-md": "^3.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
