--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "@uiw/react-md-editor": "^3.6.3",
+    "bootstrap": "^5.1.0",
     "firebaseui": "^5.0.0",
-    "markdown-to-jsx": "^7.1.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-md": "^3.1.1",
     "react-router-dom": "^5.2.0",
