--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+.firebaserc
+database-debug.log
+firebase-debug.log
+firebase.json
+firestore-debug.log
+functions/
+pubsub-debug.log
+storage.rules
+ui-debug.log
+
