--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "cv",
   "homepage": "https://SamNal2008.github.io/cv",
   "version": "0.1.0",
   "private": true,
