--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
-    "react-md": "^3.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "ts-enum-util": "^4.0.2",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
